Fix safari empty white space on book cover

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -72,7 +72,7 @@ body {
   position: absolute;
   top: 0;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .book-details {
